--- a/sass/main.css
+++ b/sass/main.css
@@ -9,8 +9,7 @@ Use a better box model (opinionated).
 *,
 ::before,
 ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /**
@@ -94,7 +93,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
+  font-family: ui-monospace, SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -178,9 +177,9 @@ select {
 Correct the inability to style clickable types in iOS and Safari.
 */
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -233,7 +232,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-[type='search'] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -309,49 +308,160 @@ a {
   clip: rect(0 0 0 0);
 }
 
-.section, .header {
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #646464;
+}
+
+.section, .service, .hero, .header {
   width: 1650px;
   padding: 0, 15px;
   margin-right: auto;
   margin-left: auto;
 }
 
-.header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+.btn, .hero__btn, .header__btn {
+  border-radius: 15px 0;
+  border: 1px solid transparent;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  transition: all 300ms linear;
 }
 
+.btn__inverse, .hero__btn:hover, .hero__btn:focus {
+  color: #37806b;
+  background-color: white;
+  border: 1px solid #37806b;
+}
+
+.header__box {
+  margin-bottom: 94px;
+}
+.header__nav {
+  display: flex;
+  align-items: center;
+  margin-top: 34px;
+}
 .header__logo {
   margin-right: auto;
   margin-left: 123px;
 }
-
 .header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-right: 64px;
 }
-
 .header__item:not(:last-child) {
   margin-right: 40px;
 }
-
 .header__link {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 20px 0;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.36;
   text-transform: uppercase;
-  color: #646464;
-  -webkit-transition: opacity 300ms linear;
   transition: opacity 300ms linear;
 }
-
 .header__link:hover, .header__link:focus {
-  opacity: .5;
+  opacity: 0.5;
 }
-/*# sourceMappingURL=main.css.map */
+.header__btn {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.36;
+  padding: 5px 19px;
+  background-color: #caa892;
+  margin-right: 150px;
+}
+.header__btn:hover, .header__btn:focus {
+  color: #caa892;
+  background-color: white;
+  border: 1px solid #caa892;
+}
+
+.hero__box {
+  display: flex;
+  margin-bottom: 126px;
+}
+.hero__text--box {
+  max-width: 606px;
+  margin: 124px 44px 0 128px;
+}
+.hero__pre-title {
+  margin-bottom: 12px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.36;
+}
+.hero__title {
+  margin-bottom: 23px;
+  font-size: 72px;
+  font-weight: 600;
+  line-height: 1.08;
+  color: #212121;
+}
+.hero__post-title {
+  margin-bottom: 28px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.66;
+}
+.hero__btn {
+  background-color: #37806b;
+  padding: 12px 28px;
+}
+.hero__img--box {
+  position: relative;
+}
+.hero__img--box::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 716px;
+  height: 626px;
+  border: 3px solid #caa892;
+  border-radius: 140px 0;
+  top: 33px;
+  left: 35px;
+}
+
+.service__box {
+  margin: 0 121px 204px 121px;
+}
+.service__pre-title {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.4;
+}
+.service__title {
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 1.6;
+  color: #212121;
+  margin-bottom: 50px;
+}
+.service__list {
+  display: flex;
+  justify-content: space-between;
+}
+.service__item {
+  display: block;
+  width: 425px;
+  height: 193px;
+  background: white;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.14);
+  border-radius: 60px 0px;
+  transition: all 300ms linear;
+}
+.service__item--title {
+  color: #212121;
+}
+.service__item:hover, .service__item:focus {
+  color: white;
+  background-color: #caa892;
+}
+.service__item:hover .service__item--title, .service__item:focus .service__item--title {
+  color: white;
+}/*# sourceMappingURL=main.css.map */
