--- a/sass/utilites/_vars.scss
+++ b/sass/utilites/_vars.scss
@@ -1,1 +1,7 @@
-$nav__item-color: #646464;
+$accent:rgb(202, 168, 146);
+$second__accent: rgb(55, 128, 107);
+$title: rgb(33, 33, 33);
+$text: rgb(100, 100, 100);
+$footer__title: rgb(17, 17, 17);
+$light: rgb(255, 255, 255);
+
